--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@tanstack/react-query": "^5.51.23",
     "@uploadthing/react": "^6.7.2",
     "add": "^2.0.6",
     "button": "^1.1.1",
@@ -34,7 +35,7 @@
     "react-dropzone": "^14.2.3",
     "react-rnd": "^10.4.12",
     "shadcn-ui": "^0.8.0",
-    "sharp": "^0.32.6",
+    "sharp": "^0.33.4",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
